# flutter_glib_native

./: README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/fengjiongmax/flutter_glib_native/: FlutterGlibNativePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/fengjiongmax/flutter_glib_native_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_glib_native.podspec
ios/Classes/: FlutterGlibNativePlugin.h  FlutterGlibNativePlugin.m  SwiftFlutterGlibNativePlugin.swift
ios/Native/: CMakeLists.txt  native_register.c  native_register.h
lib/: flutter_glib_native.dart  glib_native_gen.dart  glib_native_lib.dart  native_bind.dart
test/: flutter_glib_native_test.dart
